; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_shader.c_shader_vaddline.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_shader.c_shader_vaddline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_string_buffer = type { i32, i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @shader_vaddline(%struct.wined3d_string_buffer* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.wined3d_string_buffer*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.wined3d_string_buffer* %0, %struct.wined3d_string_buffer** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %11 = getelementptr inbounds %struct.wined3d_string_buffer, %struct.wined3d_string_buffer* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %14 = getelementptr inbounds %struct.wined3d_string_buffer, %struct.wined3d_string_buffer* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = sub i32 %12, %15
  store i32 %16, i32* %8, align 4
  %17 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %18 = getelementptr inbounds %struct.wined3d_string_buffer, %struct.wined3d_string_buffer* %17, i32 0, i32 2
  %19 = load i32*, i32** %18, align 8
  %20 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %21 = getelementptr inbounds %struct.wined3d_string_buffer, %struct.wined3d_string_buffer* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = zext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %19, i64 %23
  %25 = load i32, i32* %8, align 4
  %26 = load i8*, i8** %6, align 8
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @vsnprintf(i32* %24, i32 %25, i8* %26, i32 %27)
  store i32 %28, i32* %9, align 4
  %29 = load i32, i32* %9, align 4
  %30 = icmp slt i32 %29, 0
  br i1 %30, label %35, label %31

31:                                               ; preds = %3
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* %8, align 4
  %34 = icmp uge i32 %32, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %31, %3
  %36 = load i32, i32* %9, align 4
  store i32 %36, i32* %4, align 4
  br label %43

37:                                               ; preds = %31
  %38 = load i32, i32* %9, align 4
  %39 = load %struct.wined3d_string_buffer*, %struct.wined3d_string_buffer** %5, align 8
  %40 = getelementptr inbounds %struct.wined3d_string_buffer, %struct.wined3d_string_buffer* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = add i32 %41, %38
  store i32 %42, i32* %40, align 4
  store i32 0, i32* %4, align 4
  br label %43

43:                                               ; preds = %37, %35
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local i32 @vsnprintf(i32*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
